fix; updated category bar desktop by remove scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,15 @@ body {
   color: #1e293b;
   font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
+  
+}
+
+.scrollbar-none {
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE/Edge */
+}
+.scrollbar-none::-webkit-scrollbar {
+  display: none;                /* Chrome/Safari */
 }
 
 /* Only truly un-tailwindable things */
